@@ -47,6 +47,11 @@
       <para>September 24th, 2015</para>
       <itemizedlist>
         <listitem>
+          <para>[fernando] - Fix starting X with startx (from xinit) and sddm
+          (with consolekit2 and upowerd) and somwhat related fixes. Fixes
+          <ulink url="&blfs-ticket-root;6972">#6972</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[bdubbs] - Update to KDE Frameworks 5.14. Fixes
           <ulink url="&blfs-ticket-root;6810">#6810</ulink>.</para>
         </listitem>
