@@ -138,35 +138,49 @@ update-desktop-database -q</userinput></screen>
     <title>Starting LXDE</title>
 
     <para>
+      You can start <application>LXDE</application> from runlevel 3, using
+      <xref linkend="xinit"/>, or from runlevel 5, using a Display Manager,
+      such as <xref linkend="sddm"/>.
+    </para>
+
+    <para>
       To start <application>LXDE</application> using <xref linkend="xinit"/>,
       run the following commands:
     </para>
 
 <screen><userinput>cat &gt; ~/.xinitrc &lt;&lt; "EOF"
-startlxde
+<literal>ck-launch-session dbus-launch --exit-with-session startlxde</literal>
 EOF
 
 startx</userinput></screen>
 
-  <note>
     <para>
-      When <xref linkend="consolekit"/> was built, if you did not use the
-      recommended <xref linkend="linux-pam"/> dependency or did not rebuild
-      <xref linkend="shadow"/> with Linux-PAM, ~/.xinitrc should have the
-      entry:
+      The X session starts on the first unused virtual terminal, normally vt7.
+      You can switch to a vtn (n=1, 2, ...) simultaneously pressing the keys
+      Ctrl-Alt-Fn. To switch back to the X session, normally started at vt7,
+      use Ctrl-Alt-F7. If started from vt1 (the usual case), you will see many
+      messages there, including X starting messages, applications automatically
+      started with the session, and eventually, some warning and error
+      messages. You may prefer to redirect those messages to a log file, which
+      not only will keep vt1 uncluttered, but also can be used for debug
+      purposes. This can be done starting X with:
     </para>
 
-    <screen><userinput>ck-launch-session startlxde</userinput></screen>
+    <screen><userinput>startx &amp;&gt; ~/.x-session-errors</userinput></screen>
 
-    <para>to obtain the appropriate permissions for system functions.</para>
-  
     <para>
-      To test if ck-launch-session is needed, run
-      <command>ck-list-sessions</command> fropm the command line.  If a session
-      associated with the current tty is present that is both 'active' and
-      'local' then <command>ck-launch-session</command> is not needed.
+      You may wish to drop consolekit and/or dbus-launch, e.g., just using
+      startlxde in .~/.xinitrc, but some functionalities such as mount/umount
+      file systems from a file manager will not be possible, or the reboot
+      option will be absent or not functioning, between other problems.
     </para>
-  </note>
+
+    <para>
+      Because X is (normally) on vt7, when you shutdown the vt is switched back
+      to that one where the command starting it was executed. In this case, if
+      you wish to see the shutdown messages, simultaneously press keys Alt-F7,
+      because normally those messages appear on the vt where X was running.
+    </para>
 
   </sect2>
 <!--
