@@ -119,7 +119,9 @@
             --enable-udev-acl    \
             --enable-pam-module  \
             --enable-polkit      \
-            --with-systemdsystemunitdir=no &amp;&amp;
+            --with-xinitrc-dir=/etc/X11/app-defaults/xinitrc.d \
+            --docdir=/usr/share/doc/ConsoleKit-&consolekit-version;           \
+            --with-systemdsystemunitdir=no                     &amp;&amp;
 make</userinput></screen>
 
     <para>
@@ -130,7 +132,9 @@ make</userinput></screen>
       Now, as the <systemitem class="username">root</systemitem> user:
     </para>
 
-<screen role="root"><userinput>make install</userinput></screen>
+<screen role="root"><userinput>make install &amp;&amp;
+
+mv -v /etc/X11/app-defaults/xinitrc.d/90-consolekit{,.sh}</userinput></screen>
 
   </sect2>
 
@@ -150,12 +154,19 @@ make</userinput></screen>
       <application>PAM</application> module which is needed for
       <application>ConsoleKit</application> to work correctly with
       <application>PAM</application>. Remove if
-      <application>Linux PAM</application> is 
+      <application>Linux PAM</application> is
       <emphasis role="strong">NOT</emphasis> installed.
     </para>
 
     <para>
       <parameter>--enable-polkit</parameter>: Enable PolicyKit support.
+    </para>
+
+    <para>
+      <parameter>--with-xinitrc-dir=/etc/X11/app-defaults/xinitrc.d</parameter>:
+      Fix the localization of the 90-consolekit.sh script. Notice that the
+      script was renamed, after installation, because xinitrc expects script
+      names to have extension <emphasis>.sh</emphasis>.
     </para>
 
     <para>
@@ -251,11 +262,8 @@ chmod -v 755 /usr/lib/ConsoleKit/run-session.d/pam-foreground-compat.ck</userinp
           libck-connector.so and pam_ck_connector.so
         </seg>
         <seg>
-          /etc/ConsoleKit,
-          /usr/include/ConsoleKit,
-          /usr/lib/ConsoleKit,
-          /usr/share/doc/ConsoleKit and
-          /var/log/ConsoleKit
+          /{etc,usr/{include,lib},var/{log,run}}/ConsoleKit and
+          /usr/share/doc/ConsoleKit-&consolekit-version;
         </seg>
       </seglistitem>
     </segmentedlist>
